--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "routing"
   ],
   "dependencies": {
-    "ng-http-client-plus": "git+ssh://git@github.com:unitedsolutions/ng-http-client-plus.git"
-  },
-  "peerDependencies": {
+    "lodash": "^4.17.4",
+    "ng-http-client-plus": "git+ssh://git@github.com:unitedsolutions/ng-http-client-plus.git",
     "@angular/core": ">=4.0.0",
     "@angular/router": ">=4.2.0"
   },
