Add history support

--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@angular/common": ">=4.2.0",
     "@angular/compiler": "^4.2.0",
     "@angular/compiler-cli": "^4.2.0",
+    "@angular/core": "^4.3.6",
     "@angular/http": "^4.3.5",
     "@angular/platform-browser": "^4.2.0",
     "@angular/platform-browser-dynamic": "^4.2.0",
     "@angular/platform-server": "^4.2.0",
-    "@angular/core": "^4.3.6",
     "@angular/router": "^4.3.6",
     "@angular/tsc-wrapped": "^4.2.0",
     "@types/angular": "^1.5.16",
@@ -73,6 +73,7 @@
     "karma-webpack": "^2.0.1",
     "phantomjs-prebuilt": "^2.1.7",
     "rimraf": "^2.6.1",
+    "rollup": "^0.50.0",
     "systemjs": "0.19.39",
     "ts-helpers": "^1.1.2",
     "typescript": "^2.3.2",
