--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   ],
   "dependencies": {
     "lodash": "^4.17.11",
-    "ng-http-client-plus": "git+ssh://git@github.com/unitedsolutions/ng-http-client-plus.git#169726283a85772116610f85525cdf7cfc14f197"
+    "ng-http-client-plus": "git+ssh://git@github.com/unitedsolutions/ng-http-client-plus.git#169726283a85772116610f85525cdf7cfc14f197",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3"
   },
   "peerDependencies": {
     "@angular/core": ">=4.3.6",
